--- a/ee25btech11047/Matgeo/problem6/beamer/b.tex
+++ b/ee25btech11047/Matgeo/problem6/beamer/b.tex
@@ -124,9 +124,7 @@ Equation of a Line is
 \vec{n}^T \vec{x} &= c \\
 \myvec{-2 & 1}\myvec{1 \\ 2} &= c \\
 c &= 0 \\
-\myvec{-2 & 1}\vec{x} &= 0 \\
--2x + y &= 0 \\
-\boxed{y = 2x}
+\myvec{-2 & 1}\vec{x} &= 0 
 \end{align}
 \end{frame}
 \begin{frame}[fragile]
