--- a/ee25btech11047/Matgeo/problem6/beamer/b.tex
+++ b/ee25btech11047/Matgeo/problem6/beamer/b.tex
@@ -99,23 +99,27 @@ Equation of a line is:
 \begin{frame}{Theoretical Solution}
    \begin{align}
 \myvec{\vec{A}&\vec{B}}^T\vec{n} &= \myvec{c\\c}\\
-\myvec{1 & 2 \\ 3 & 6}\vec{n} &= \myvec{0 \\ 0} 
+\myvec{\vec{A}&\vec{B}}^T\vec{n} &= \myvec{1\\1}\\
+\myvec{1 & 2 \\ 3 & 6}\vec{n} &= \myvec{1 \\ 1}\\ 
+\myvec{1 & 2 & 1 \\ 3 & 6 & 1} & 
+\xrightarrow{R_2 - 3R_1}\;\;
+\myvec{1 & 2 & 1 \\ 0 & 0 & -2} \\
+0=-2
 \end{align}
+\begin{center}
+Inconsistent.Hence c=0.
+\end{center}
+
+\begin{align}
+\myvec{1 & 2  \\ 3 & 6 }\vec{n}= \myvec{0 \\ 0}\\
+\end{align}
+
+\end{frame}
+\begin{frame}{Theoretical Solution}
 \begin{align}
 \myvec{1 & 2 & 0 \\ 3 & 6 & 0} & 
 \xrightarrow{R_2 - 3R_1}\;\;
-\myvec{1 & 2 & 0 \\ 0 & 0 & 0} 
-\end{align}
-
-\begin{align}
-n_1 + 2n_2 &= 0 
-\end{align}
-\end{frame}
-\begin{frame}{Theoretical Solution}
-
-Let $n_2=1$
-\begin{align}
-n_1 &= -2, \\
+\myvec{1 & 2 & 0 \\ 0 & 0 & 0} \\
 \vec{n} &= \myvec{-2 \\ 1}
 \end{align}
 
@@ -124,7 +128,9 @@ Equation of a Line is
 \vec{n}^T \vec{x} &= c \\
 \myvec{-2 & 1}\myvec{1 \\ 2} &= c \\
 c &= 0 \\
-\myvec{-2 & 1}\vec{x} &= 0 
+\myvec{-2 & 1}\vec{x} &= 0 \\
+-2x + y &= 0 \\
+\boxed{y = 2x}
 \end{align}
 \end{frame}
 \begin{frame}[fragile]
@@ -300,7 +306,7 @@ plt.show()
 \begin{frame}{Plot}
     \begin{figure}
         \centering
-        \includegraphics[width=0.5\linewidth]{figs/fig1.png}
+        \includegraphics[width=1.0\linewidth]{figs/fig1.png}
         \caption{Caption}
         \label{fig:placeholder}
     \end{figure}
