--- a/ee25btech11047/Matgeo/problem6/main.tex
+++ b/ee25btech11047/Matgeo/problem6/main.tex
@@ -70,7 +70,17 @@ Find the equation of the line passing through the points
 \textbf{Solution:}  
 
 \begin{align}
-\myvec{\vec{A}&\vec{B}}^T\vec{n} &= \myvec{c\\c}\\
+\myvec{\vec{A}&\vec{B}}^T\vec{n} &= \myvec{1\\1}\\
+\myvec{1 & 2 \\ 3 & 6}\vec{n} &= \myvec{1 \\ 1}\\ 
+\myvec{1 & 2 & 1 \\ 3 & 6 & 1} & 
+\xrightarrow{R_2 - 3R_1}\;\;
+\myvec{1 & 2 & 1 \\ 0 & 0 & -2} \\
+0=-2
+\end{align}
+\begin{center}
+Inconsistent.Hence c=0.
+\end{center}
+\begin{align}
 \myvec{1 & 2 \\ 3 & 6}\vec{n} &= \myvec{0 \\ 0} 
 \end{align}
 \begin{align}
@@ -80,12 +90,6 @@ Find the equation of the line passing through the points
 \end{align}
 
 \begin{align}
-n_1 + 2n_2 &= 0 
-\end{align}
-
-Let $n_2=1$
-\begin{align}
-n_1 &= -2, \\
 \vec{n} &= \myvec{-2 \\ 1}
 \end{align}
 
@@ -94,7 +98,9 @@ Equation of a Line is
 \vec{n}^T \vec{x} &= c \\
 \myvec{-2 & 1}\myvec{1 \\ 2} &= c \\
 c &= 0 \\
-\myvec{-2 & 1}\vec{x} &= 0 
+\myvec{-2 & 1}\vec{x} &= 0 \\
+-2x + y &= 0 \\
+\boxed{y = 2x}
 \end{align}
 \newpage
 \begin{figure}
